# temporal-agent-harness-example

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.zed/: debug.json
agent_harness/: README.md  activity_router.py  agent.py  attachments.py  context_manager.py  errors.py  guards.py  invocation.py  llm_guards.py  mcp.py  mcp_types.py  messages.py  sliding_window_context_manager.py  streaming.py  tool_types.py  tools.py  workflow_activities.py
agent_harness/providers/: README.md  __init__.py  _shared.py  chatgpt.py  claude.py  errors.py  gemini.py  interface.py
basic_file_agent/: README.md  __init__.py  __main__.py  env.py  guards.py  start_workflow.py  tool_types.py  tools.py  worker.py  workflow.py
claude_harness/: claude_agent.py  context_manager.py  guards.py  llm_guards.py  mcp.py  tool_types.py  tools.py
docs/: building-with-agent-harness.md  extensible-tool-categories-and-guard-policy.md  local-development.md  simple-chat-agent-worker-harness-review.md  temporal-agent-production-readiness.md
simple_chat_agent/: Dockerfile  README.md  __init__.py  codec_server.py  mcp_auth.py  mcp_oauth.py  replay.py  store.py  streaming.py  user_chats_workflow.py  web.py  worker.py  workflow.py
simple_chat_agent/api/: README.md  anthropic_models.py  artifacts.py  auth.py  features.py  local_auth.py  main.py  mcp_helpers.py  schemas.py  serialization.py  streaming.py  temporal_ui.py  thinking.py
tests/: test_activity_router.py  test_invocation.py  test_mcp_oauth.py  test_providers.py  test_tool_categories.py  test_workflow_activities.py
(+66 files in other folders)
